# DeePTB

./: .buildinfo  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AI_CODING_GUIDE.html  CITATIONS.html  CLAUDE.md  CMakeLists.txt  CONTEXT.md  CONTRIBUTING.html  DevelopingTeam.html  Dockerfile  Dockerfile.dev  Dockerfile.gitlab  Dockerfile.main  GEMINI.md  NNEGF.py  NNSKTB.py  README.md  Si_nrl.ipynb  auto_install_torch_scatter.py  band_new.json  genindex.html  index.html  install.sh  install_julia.sh  install_julia_packages.jl  objects.inv  pardiso_architecture.html  phase1_summary.html  pyproject.toml  search.html  searchindex.js  setup.py  test_mkl_pardiso.jl  ut.sh
.doctrees/: AI_CODING_GUIDE.doctree  CITATIONS.doctree  CONTRIBUTING.doctree  DevelopingTeam.doctree  environment.pickle  index.doctree  pardiso_architecture.doctree  phase1_summary.doctree
.doctrees/adr/: 0001-reduced-matrix-elements.doctree  0002-orbitalmapper-as-index-authority.doctree  0003-kpoint-coordinate-convention.doctree  index.doctree
.doctrees/community/: contribution_guide.doctree  faq.doctree
.doctrees/input_params/: common_options.doctree  data_options.doctree  index.doctree  model_options.doctree  run_options.doctree  set_info.doctree  train_options.doctree
.doctrees/maintenance/: ai_review_prompts.doctree  dependency_compatibility.doctree  dependency_upgrade_test_plan.doctree  docs_warning_triage.doctree  index.doctree  maintainer_sop.doctree  pr_review_plan.doctree  review_workflow.doctree  risk_map.doctree  test_strategy.doctree
.doctrees/quick_start/: basic_api.doctree  easy_install.doctree  input.doctree
.github/: pull_request_template.md  release-check.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml  help-wanted.yml  software-enhancements.yml  tests.yml
.github/workflows/: add_pages_doc.yml  devcontainer.yml  gpu_compat.yml  image.yml  pr_review_plan.yml  pr_review_plan_comment.yml  publish-to-pypi.yml  publish-to-testpypi.yml  repository_hygiene.yml  unit_test.yml
.workflow/: pipeline-20221109.yml  unit_test.yml
_sources/: pardiso_architecture.md
_sources/adr/: 0001-reduced-matrix-elements.md  index.md
_sources/community/: faq.md
_sources/input_params/: data_options.rst  run_options.rst  train_options.rst
_sources/maintenance/: dependency_upgrade_test_plan.md  index.md  review_workflow.md  risk_map.md
_sources/quick_start/: easy_install.md
_static/: banner.css  banner.js  dark_rtd.css  documentation_options.js  mystnb.8ecb98da25f57f5357bf6f572d296f466b2cfe2517ffebfabe82451661e28f02.css  sphinx_highlight.js
_static/scripts/: sphinx-book-theme.js
_static/styles/: sphinx-book-theme.css
adr/: 0001-reduced-matrix-elements.html  0002-orbitalmapper-as-index-authority.html  0003-kpoint-coordinate-convention.html  index.html
advanced/e3tb/: advanced_input.html  data_preparation.html  index.html  loss_analysis.html
advanced/elec_properties/: band.html  dos.html  fermi_surface.html  index.html
advanced/interface/: TBPLAS.html  TBtrans.html  index.html
advanced/sktb/: dftb.html  dptb_env.html  index.html  nrl_tb.html  soc.html
community/: contribution_guide.html  faq.html
docs/: AI_CODING_GUIDE.md  CITATIONS.md  CONTRIBUTING.md  DevelopingTeam.md  auto_install_torch_aux_package.py  auto_install_torch_scatter.py  auto_update_fops.py  conf.py  index.rst  pardiso_architecture.md  phase1_summary.md  requirements.txt
docs/adr/: 0002-orbitalmapper-as-index-authority.md  0003-kpoint-coordinate-convention.md  index.md
docs/advanced/: 0422_performance_experiment_notes.md  dftb.md  dptb_env.md  e3module.md  nrl_tb.md  so2_compact_wigner.md  soc.md
docs/community/: contribution_guide.md
docs/input_params/: common_options.rst  data_options.rst  index.rst  input_tags.rst  model_options.rst  run_options.rst  set_info.rst  train_options.rst
docs/maintenance/: ai_review_prompts.md  dependency_compatibility.md  dependency_upgrade_test_plan.md  docs_warning_triage.md  maintainer_sop.md  pr_review_plan.md  review_workflow.md  test_strategy.md
docs/quick_start/: basic_api.md  easy_install.md  hands_on.md  input.md
dpnegf/: NNEGF.py  NNSKTB.py  Parameters.py  band.py  main.py
dpnegf/negf/: NEGF.py  NEGFHamilton.py  NEGFStruct.py  RegionHamil.py  SelfEnergy.py  SurfaceGF.py  Transmission.py
dpnegf/nnet/: Data.py  Model.py  NetWorks_diff_onsite.py
dpnegf/sktb/: BuildHS.py  ElectronBase.py  GreenFunctions.py  NEGF.py  Parameters.py  RotateSK.py  SKTB.py
dptb/: __init__.py  __main__.py  version.py
dptb/data/: AtomicData.py  AtomicDataDict.py  __init__.py  _build.py  _keys.py  build.py  dataloader.py  keys.py  test_data.py  transforms.py  transforms_bond.py  transforms_upper_triangle.py  use_data.ipynb
dptb/dataprocess/: __init__.py  dataloader.py  datareader.py  process_wannier.py  processor.py  toolset.py
dptb/entrypoints/: __init__.py  bond.py  collectskf.py  config.py  data.py  emp_sk.py  export.py  main.py  multi_train.py  nrl2json.py  pdso.py  postrun.py  pth2json.py  run.py  test.py  tester.py  train.py
dptb/hamiltonian/: hamil_eig_sk.py  hamil_eig_sk_crt.py  hamil_eig_sk_crt_soc.py  soc.py  speed.ipynb  transform_se3.py  transform_sk.py  transform_sk_speed.py
dptb/kpoints/: __init__.py  geometry.py  mesh.py  path.py  reduction.py  sampling.py
dptb/negf/: Areshkin.py  Device.py  Lead.py  RGF.py  SCF.py  __init__.py  areshkin_pole_sum.py  bloch.py  density.py  (+20 more)
examples/: get_band_insteps.ipynb  plot.ipynb  plot_band.py  plotband.ipynb
input_params/: common_options.html  data_options.html  index.html  model_options.html  run_options.html  set_info.html  train_options.html
maintenance/: ai_review_prompts.html  dependency_compatibility.html  dependency_upgrade_test_plan.html  docs_warning_triage.html  index.html  maintainer_sop.html  pr_review_plan.html  review_workflow.html  risk_map.html  test_strategy.html
negf/: NEGF.py  Transmission.py
nnet/: Model.py  NetWorks.py
quick_start/: basic_api.html  easy_install.html  input.html
sktb/: ElectronBase.py  NEGF.py  SKTB.py  SlaterKosterPara.py  StructData.py
(+1358 files in other folders)
